--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -28,6 +28,14 @@
   margin-bottom: 5px;
 }
 
+#analyze-btn {
+  margin-bottom: 16px;
+}
+
+#correlation-block {
+  clear: left;
+}
+
 #correlation-result {
   margin-top: 15px;
   background-color: #f5f5f5;
